# lidar2lidar

./: CMakeLists.txt  README.md  package.xml
config/rviz_cfg/: kinematic_custom.rviz
include/lidar2lidar/: kinematic_transformer.h  point_cloud_aligner.h  point_cloud_buffer.h  types.h
launch/: visualize_lidar2lidar.launch
src/: kinematic_transformer.cpp  point_cloud_aligner.cpp  point_cloud_buffer.cpp  visualize_lidar2lidar.cpp  visualize_lidar2lidar.cpp.backup  visualize_lidar2lidar.cpp.legacy  visualize_lidar2lidar_refactored.cpp
